--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -37,15 +37,16 @@ rules:
     use: always
     config:
       skipUserProjects: true
+      keepStricterAccessLevel: true
       name: master
       push_access_level: 30
-      merge_access_level: 40
-      unprotect_access_level: 60
-  - rule: org.vaulttec.gitlab.enforcer.rule.ProtectedBranchRule
+      merge_access_level: 30
+   - rule: org.vaulttec.gitlab.enforcer.rule.ProtectedBranchRule
     use: always
     config:
       skipUserProjects: true
+      keepStricterAccessLevel: true
       name: release/*
       push_access_level: 40
       merge_access_level: 40
-      unprotect_access_level: 60
+ 
