--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ cache:
     - '$HOME/.m2/repository'
 
 after_success:
-  - export APP_NAME=gitlab-enforcer
+  # APP_NAME, DOCKER_USERNAME and DOCKER_PASSWORD are defined in Travis repository settings 
   - export IMAGE_NAME=$DOCKER_USERNAME/$APP_NAME
   - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH; fi`
   - export IMAGE_NAME=$DOCKER_USERNAME/$APP_NAME
