adds support for changing the scheduling interval

--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -12,6 +12,8 @@ proxy:
   port: ${HTTP_PROXY_PORT}
 
 enforcer:
+  scheduler:
+    rate: ${ENFORCER_SCHEDULER_RATE}
   systemHookToken: ${ENFORCER_SYSTEM_HOOK_TOKEN}
 
 gitlab:
