enforces additional group settings ("auto_devops_enabled", "project_creation_level" and "subgroup_creation_level")

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -33,6 +33,9 @@ rules:
     config:
       membership_lock: true
       share_with_group_lock: true
+      auto_devops_enabled: false
+      project_creation_level: 40
+      subgroup_creation_level: 50
   - rule: org.vaulttec.gitlab.enforcer.rule.ProtectedBranchRule
     use: always
     config:
