--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,29 +11,42 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
       - name: Set up JDK 11
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           java-version: "11"
-          distribution: "adopt"
+          distribution: "temurin"
+          cache: maven
 
-      - name: Build for push
+      - name: Build with Maven
         run: mvn -B clean package -Dskip.docker.build=true
 
-      - name: Login to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-
       - name: Inject slug/short variables
-        uses: rlespinasse/github-slug-action@v3.x
+        uses: rlespinasse/github-slug-action@v4.x
 
-      - name: Building and publich Docker Image
-        run: |
-          IMAGE_NAME=${{ secrets.DOCKER_USERNAME }}/${{ secrets.APP_NAME }}
-          TAG=`if [ "${{ env.GITHUB_REF_SLUG }}" == "master" ]; then echo "latest"; else echo ${{ env.GITHUB_REF_SLUG }}; fi`
+      - name: Login to Docker Hub
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-          docker build -t $IMAGE_NAME:${{ env.GITHUB_SHA_SHORT }} -t $IMAGE_NAME:$TAG --build-arg JAR_FILE=target/${{ secrets.APP_NAME }}.jar .
-          docker push $IMAGE_NAME --all-tags
+      - name: Set up Docker Buildx
+        if: github.event_name != 'pull_request'
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build and push Docker image
+        if: github.event_name != 'pull_request'
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          build-args: |
+            JAR_FILE=target/${{ secrets.APP_NAME }}.jar
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/${{ secrets.APP_NAME }}:${{ env.GITHUB_SHA_SHORT }}
+            ${{ secrets.DOCKER_USERNAME }}/${{ secrets.APP_NAME }}:${{ env.GITHUB_REF_SLUG == 'master' && 'latest' || env.GITHUB_REF_SLUG }}
