--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,14 +11,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
         with:
           fetch-depth: 0
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v5
         with:
-          java-version: "11"
+          java-version: "17"
           distribution: "temurin"
           cache: maven
 
@@ -26,27 +26,32 @@ jobs:
         run: mvn -B clean package -Dskip.docker.build=true
 
       - name: Inject slug/short variables
-        uses: rlespinasse/github-slug-action@v4.x
+        uses: rlespinasse/github-slug-action@v4
 
       - name: Login to Docker Hub
         if: github.event_name != 'pull_request'
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Set up QEMU
+        if: github.event_name != 'pull_request'
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: 'arm64'
+
       - name: Set up Docker Buildx
         if: github.event_name != 'pull_request'
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       - name: Build and push Docker image
         if: github.event_name != 'pull_request'
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v6
         with:
           context: .
           push: true
-          build-args: |
-            JAR_FILE=target/${{ secrets.APP_NAME }}.jar
+          platforms: linux/amd64,linux/arm64
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/${{ secrets.APP_NAME }}:${{ env.GITHUB_SHA_SHORT }}
             ${{ secrets.DOCKER_USERNAME }}/${{ secrets.APP_NAME }}:${{ env.GITHUB_REF_SLUG == 'master' && 'latest' || env.GITHUB_REF_SLUG }}
